--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-.bigBox{
-    position: relative;
-    width: 1050px;
-    height: 650px;
+body{
+    width: 960px;
     background-color:#777;
+}
+.bigBox{
     text-align: center;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
@@ -10,7 +10,7 @@
 
 .outsideBox{
     background: #ebebeb;
-    width: 960px;
+    width: 900px;
     height: 70px;
     line-height: 70px;
     color: #777;
@@ -26,30 +26,31 @@
 }
 
 .clearfix::after{
-  content: "";
-  display: block;
-  clear: both;
-}
+    content: "";
+    display: block;
+    clear: both;
+  }
 
 .section{
     position: relative;
     background: #ebebeb;
-    width: 530px;
+    width: 495px;
     height: 300px;
     left: 40px;
     float: left;
     color: #777;
+    line-height: 50px;
 }
 
 .article{
     position: relative;
-    height: 73%;
+    height: 70%;
     width: 96%;
     background-color: #777;
-    line-height: 3;
+    line-height: 50px;
     color: #fff;
     right: 30px;
-    top: 15px;
+    top: 0px;
 }
 
 .content{
@@ -75,13 +76,13 @@
 
 .aside{ 
     position: relative;
-    width: 400px;
+    width: 375px;
     height: 300px;
     background: #ebebeb;
     left: 30px;
     bottom: 18px;
     float: left;
-    line-height: 4;
+    line-height: 85px;
     color: #777;
 
 }
